--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -1,7 +1,3 @@
-{% extends "layouts/base.html" %}
-
-{% block content %}
-<div class="prose prose-invert">
-  {{ content | markdown | safe }}
-</div>
+{% extends "layouts/base.html" %} {% block content %}
+<div class="prose prose-invert">{{ content | markdown | safe }}</div>
 {% endblock %}
