--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -19,7 +19,9 @@
           agents.
         </p>
         <p class="text-sm">
-          <a href="/onyx" class="text-white/80 hover:text-white underline">Download Onyx in beta for Android &amp; iOS now.</a>
+          <a href="/onyx" class="text-white/80 hover:text-white underline"
+            >Download Onyx in beta for Android &amp; iOS now.</a
+          >
         </p>
       </div>
     </div>
@@ -29,39 +31,49 @@
       <h2 class="text-lg font-bold mb-4">Our Principles</h2>
       <ul class="list-disc ml-6 space-y-2 text-sm">
         <li>
-          Open Source <span class="text-white/50">[</span><a
+          Open Source <span class="text-white/50">[</span
+          ><a
             href="https://github.com/OpenAgentsInc"
             target="_blank"
             class="text-white/50 hover:text-white/80 underline"
-            >GitHub</a><span class="text-white/50">]</span>
+            >GitHub</a
+          ><span class="text-white/50">]</span>
         </li>
         <li>
-          Build in Public <span class="text-white/50">[</span><a
+          Build in Public <span class="text-white/50">[</span
+          ><a
             href="/video-series"
             class="text-white/50 hover:text-white/80 underline"
-            >Video Series</a><span class="text-white/50">]</span>
+            >Video Series</a
+          ><span class="text-white/50">]</span>
         </li>
         <li>Bitcoin Only</li>
         <li>
-          One Market <span class="text-white/50">[</span><a
+          One Market <span class="text-white/50">[</span
+          ><a
             href="https://x.com/OpenAgentsInc/status/1866351898376405220"
             target="_blank"
             class="text-white/50 hover:text-white/80 underline"
-            >Video</a><span class="text-white/50">]</span>
+            >Video</a
+          ><span class="text-white/50">]</span>
         </li>
         <li>
-          Neutrality Wins <span class="text-white/50">[</span><a
+          Neutrality Wins <span class="text-white/50">[</span
+          ><a
             href="https://x.com/OpenAgentsInc/status/1870373254197613052"
             target="_blank"
             class="text-white/50 hover:text-white/80 underline"
-            >Video</a><span class="text-white/50">]</span>
+            >Video</a
+          ><span class="text-white/50">]</span>
         </li>
         <li>
-          Pay Contributors Rev-Share <span class="text-white/50">[</span><a
+          Pay Contributors Rev-Share <span class="text-white/50">[</span
+          ><a
             href="https://github.com/OpenAgentsInc/openagents/wiki/Flow-of-Funds"
             target="_blank"
             class="text-white/50 hover:text-white/80 underline"
-            >Spec</a><span class="text-white/50">]</span>
+            >Spec</a
+          ><span class="text-white/50">]</span>
         </li>
         <li>Incentivized Interoperability</li>
       </ul>
@@ -72,7 +84,12 @@
   <div class="border border-white p-6">
     <h2 class="text-lg font-bold mb-6">Latest Updates</h2>
 
-    {% call blog::blog_post("January 16, 2025", "Repo Map Tool", "We've released a small tool for generating a concise map of a GitHub repo, optimized for LLM chats & agents, using code from [Aider](https://aider.chat). [Try it here!](/repomap)") %}
-    {% call blog::blog_post("January 14, 2025", "New Website", "We have a new website! It uses Rust, HTMX, and a new font Berkeley Mono from the US Graphics Company, from which we also drew inspiration on design.") %}
+    {% call blog::blog_post("January 16, 2025", "Repo Map Tool", "We've released
+    a small tool for generating a concise map of a GitHub repo, optimized for
+    LLM chats & agents, using code from [Aider](https://aider.chat). [Try it
+    here!](/repomap)") %} {% call blog::blog_post("January 14, 2025", "New
+    Website", "We have a new website! It uses Rust, HTMX, and a new font
+    Berkeley Mono from the US Graphics Company, from which we also drew
+    inspiration on design.") %}
   </div>
 </div>
