--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -4,6 +4,8 @@
     <h3 class="text-base font-semibold">{{title}}</h3>
     <p class="text-white/50 text-sm">{{date}}</p>
   </div>
-  <div class="text-sm prose prose-invert">{{crate::filters::render_markdown(content)}}</div>
+  <div class="text-sm prose prose-invert">
+    {{crate::filters::render_markdown(content)}}
+  </div>
 </div>
 {% endmacro %}
