--- a/templates/components/chat/login_overlay.html
+++ b/templates/components/chat/login_overlay.html
@@ -4,6 +4,6 @@
 >
   <div class="p-6 rounded-xl border border-white text-center">
     <h2 class="text-xl font-semibold text-white mb-4">Coming Soon</h2>
-    <p class="text-white mb-6">Under construction, check back soon</p>
+    <p class="text-white">Under construction, check back soon</p>
   </div>
 </div>
