--- a/templates/pages/signup.html
+++ b/templates/pages/signup.html
@@ -1,6 +1,4 @@
-{% extends "layouts/base.html" %}
-
-{% block title %}{{ title }}{% endblock %}
+{% extends "layouts/auth_base.html" %}
 
 {% block content %}
 <div class="min-h-screen bg-gray-50 flex flex-col justify-center py-12 sm:px-6 lg:px-8">
