--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -10,7 +10,7 @@
 
   <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
     <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-      <form class="space-y-6" action="/auth/login" method="POST">
+      <form class="space-y-6" action="/auth/login" method="POST" onsubmit="clearAuthError()">
         <div>
           <label for="email" class="block text-sm font-medium text-gray-700">
             Email address
